--- a/HelloPhotino/HelloPhotino/HelloPhotino.csproj
+++ b/HelloPhotino/HelloPhotino/HelloPhotino.csproj
@@ -9,11 +9,11 @@
   <ItemGroup>
     <PackageReference Include="HotChocolate" Version="12.0.0-preview.30" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.7.21377.19" />
-    <PackageReference Include="Photino.NET" Version="2.0.11" />
+    <PackageReference Include="Photino.NET" Version="2.0.13" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Photino.GraphQL\Photino.Access.csproj" />
+    <ProjectReference Include="..\Photino.Access\Photino.Access.csproj" />
   </ItemGroup>
 
   <ItemGroup>
