--- a/HelloPhotino/Photino.Access/Photino.Access.csproj
+++ b/HelloPhotino/Photino.Access/Photino.Access.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Photino.NET" Version="2.0.13" />
+  </ItemGroup>
+
 </Project>
