--- a/photino-fetch/package.json
+++ b/photino-fetch/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "photinoex",
+  "name": "photino-fetch",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "private": false,
   "scripts": {
