--- a/photinouisample/package.json
+++ b/photinouisample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photinosample",
+  "name": "photinouisample",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "photino-fetch": "../photino-fetch",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
